# byo-web-server-mvp

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: task.py
backend/tests/: test_task_service.py
docs/: technical-architecture.md
